<resources>
    <string name="app_name">Notes</string>
    <string name="create_new_note">+</string>
    <string name="settings">Settings</string>
    <string name="title">Введите название</string>
    <string name="info">Введите текст</string>
    <string name="title_demo">Какая-то заметка</string>
    <string name="save">Сохранить</string>
    <string name="themes">Выбор темы</string>
    <string name="settings_internet">Кэш из облачного хранилища</string>
    <string name="about">О приложении</string>
    <string name="back_to_menu">Вернуться в меню</string>
    <string name="note_add">Add New Note</string>
    <string name="share">Share</string>
    <string name="list_title">Список заметок</string>
    <string name="list_notes">Список заметок</string>
    <string name="exit">Выход из приложения</string>
    <string name="refresh">Обновить</string>
    <string name="info_title">Заметка</string>
    <string name="drawer_open">Открыть</string>
    <string name="drawer_close">Закрыть</string>
    <string name="positive_putton">Выйти</string>
    <string name="negative_button">Остаться</string>
    <string name="exit_message">Вы уверены, что хотите выйти?</string>
    <string name="update">Изменить</string>
    <string name="delete">Удалить</string>
</resources>